chore: add ability to support multiple automations per task
