# apps/api/src/app.module.ts
@@ -4,6 +4,7 @@ import { AppController } from './app.controller';
 import { AppService } from './app.service';
 import { AttachmentsModule } from './attachments/attachments.module';
 import { AuthModule } from './auth/auth.module';
+import { AutomationModule } from './automation/automation.module';
 import { CommentsModule } from './comments/comments.module';
 import { PeopleModule } from './people/people.module';
 import { DevicesModule } from './devices/devices.module';
@@ -17,7 +18,6 @@ import { TasksModule } from './tasks/tasks.module';
 import { VendorsModule } from './vendors/vendors.module';
 import { ContextModule } from './context/context.module';
 
-
 @Module({
   imports: [
     ConfigModule.forRoot({
@@ -29,6 +29,7 @@ import { ContextModule } from './context/context.module';
       },
     }),
     AuthModule,
+    AutomationModule,
     OrganizationModule,
     PeopleModule,
     RisksModule,
